--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1"
   }
 }
